samples/_failures_safe/1761605283_d22b90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c9a45dd.c: In function ‘main’:
./samples/SAFE/__tmp_5c9a45dd.c:139:16: error: missing terminating " character
  139 |         printf("WARNING: High error rate detected
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5c9a45dd.c:139:9: error: expected expression at end of input
  139 |         printf("WARNING: High error rate detected
      |         ^~~~~~
./samples/SAFE/__tmp_5c9a45dd.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c9a45dd.c:139:9: error: expected declaration or statement at end of input
